--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Grand World</h1>
+<h1>Blog for I18N and L10N</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <p>This blog will contain information about best practices for JavaScript internationalization.</p>
 </body>
 </html>
